Missed to change it in getStartDate too :(